--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,2 +1,19 @@
-flutter>=1.17.5
-flask>=1.1.2
+astroid==2.4.2
+click==7.1.2
+colorama==0.4.3
+export==0.1.2
+Flask==1.1.2
+Flask-Cors==3.0.8
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+mccabe==0.6.1
+psycopg2-binary==2.8.5
+pylint==2.5.3
+six==1.15.0
+toml==0.10.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+youtube-dl==2020.5.8
